[package]
name = "container_fmu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
approx = "0.5.1"
fmi = { path = "../fmi" }
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"

[build-dependencies]
static_vcruntime = "2.0"

[dev-dependencies]
rstest = "0.26.1"
